--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/logInButton"
+        android:id="@+id/loginLogInButton"
         android:layout_width="253dp"
         android:layout_height="42dp"
         android:layout_marginStart="80dp"
@@ -93,10 +93,10 @@
         android:text="Don't have an account?"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logInButton" />
+        app:layout_constraintTop_toBottomOf="@+id/loginLogInButton" />
 
     <Button
-        android:id="@+id/signUp"
+        android:id="@+id/loginSignUpButton"
         android:layout_width="101dp"
         android:layout_height="34dp"
         android:layout_marginStart="25dp"
@@ -108,6 +108,6 @@
         android:textSize="12sp"
         app:backgroundTint="#0277BD"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/logInButton" />
+        app:layout_constraintTop_toBottomOf="@+id/loginLogInButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
