--- a/app/src/main/res/layout/activity_phone_auth.xml
+++ b/app/src/main/res/layout/activity_phone_auth.xml
@@ -16,53 +16,58 @@
         android:layout_marginEnd="33dp"
         android:layout_marginRight="33dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/resendOTPView"
-        android:layout_width="198dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
-        android:layout_marginTop="21dp"
-        android:gravity="center"
-        android:text="Didn't receive OTP?"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumberOTP" />
-
     <Button
         android:id="@+id/resendOTPButton"
-        android:layout_width="152dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginRight="22dp"
-        android:background="#FFFFFF"
-        android:text="RESEND OTP"
-        android:textColor="#F40505"
-        app:backgroundTint="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/resendOTPView"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumberOTP" />
+        android:layout_width="327dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="15dp"
+        android:background="#E10A0A"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:backgroundTint="#F60303"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/otpVerifyButton" />
 
     <Button
         android:id="@+id/otpVerifyButton"
         android:layout_width="334dp"
         android:layout_height="48dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="38dp"
-        android:layout_marginRight="38dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginRight="33dp"
         android:background="#0573F1"
         android:text="VERIFY"
+        android:textSize="14sp"
         app:backgroundTint="#0AA0FA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resendOTPView" />
+        app:layout_constraintTop_toBottomOf="@+id/phoneNumberOTP" />
+
+    <TextView
+        android:id="@+id/phoneVerifiedTextview"
+        android:layout_width="316dp"
+        android:layout_height="81dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="144dp"
+        android:gravity="center"
+        android:isScrollContainer="true"
+        android:textColor="#68F307"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
