--- a/app/src/main/res/layout/activity_choose_vehicle.xml
+++ b/app/src/main/res/layout/activity_choose_vehicle.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.126" />
 
     <ImageButton
-        android:id="@+id/chooseBusButton"
+        android:id="@+id/busChooseButton"
         android:layout_width="200dp"
         android:layout_height="120dp"
         android:layout_marginTop="84dp"
@@ -39,7 +39,7 @@
         android:layout_marginTop="147dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/chooseBusButton"
+        app:layout_constraintTop_toTopOf="@+id/busChooseButton"
         app:srcCompat="@drawable/bike" />
 
     <ImageButton
@@ -49,7 +49,7 @@
         android:layout_marginTop="293dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/chooseBusButton"
+        app:layout_constraintTop_toTopOf="@+id/busChooseButton"
         app:srcCompat="@drawable/car" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
