fare database created and connected

--- a/app/src/main/res/layout/activity_bus_seat_selection.xml
+++ b/app/src/main/res/layout/activity_bus_seat_selection.xml
@@ -12,7 +12,7 @@
         android:id="@+id/busFromTextView"
         android:layout_width="69dp"
         android:layout_height="40dp"
-        android:gravity="center_horizontal|center_vertical"
+        android:gravity="center_vertical"
         android:text="From"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -51,7 +51,7 @@
         android:id="@+id/busNumberTextView"
         android:layout_width="wrap_content"
         android:layout_height="49dp"
-        android:gravity="center_horizontal|center_vertical"
+        android:gravity="center_vertical"
         android:text="Bus No"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -90,7 +90,7 @@
         android:id="@+id/busToTextView"
         android:layout_width="69dp"
         android:layout_height="40dp"
-        android:gravity="center_horizontal|center_vertical"
+        android:gravity="center_vertical"
         android:text="To"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -103,18 +103,61 @@
 
     <TextView
         android:id="@+id/seatCountTextView"
-        android:layout_width="69dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center_horizontal|center_vertical"
+        android:gravity="center_vertical"
         android:text="Seats"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.149"
+        app:layout_constraintHorizontal_bias="0.138"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.463" />
+
+    <Button
+        android:id="@+id/confirmButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="confirm"
+        android:text="CONFIRM"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.906" />
+
+    <TextView
+        android:id="@+id/fareLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:text="Fare"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.134"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.583" />
+
+    <TextView
+        android:id="@+id/fareShowTextView"
+        android:layout_width="212dp"
+        android:layout_height="50dp"
+        android:background="#FFFFFF"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.793"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.584" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
