--- a/app/src/main/res/layout/activity_driver_vehicle_type_selection.xml
+++ b/app/src/main/res/layout/activity_driver_vehicle_type_selection.xml
@@ -8,97 +8,90 @@
     tools:context=".DriverVehicleTypeSelection">
 
     <Spinner
-        android:id="@+id/driverTypeSpinner"
-        android:layout_width="230dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="520dp"
+        android:id="@+id/driverVehicleTypeSpinner"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="170dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="126dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginRight="43dp"
+        android:layout_marginBottom="562dp"
         android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.462"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.391" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/vehicleNoSpinner"
-        android:layout_width="230dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginLeft="160dp"
-        android:layout_marginTop="140dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="500dp"
+        android:id="@+id/driverVehicleNumberSpinner"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="170dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginRight="43dp"
         android:background="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/driverVehicleTypeSpinner" />
 
     <TextView
-        android:id="@+id/DriverSelectVehicleText"
-        android:layout_width="155dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginTop="234dp"
-        android:layout_marginEnd="72dp"
-        android:layout_marginRight="72dp"
-        android:layout_marginBottom="683dp"
-        android:gravity="center_vertical"
-        android:text="Select Vehicle"
-        android:textColor="@color/white"
-        android:textSize="24sp"
+        android:id="@+id/driverTypetextview"
+        android:layout_width="109dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="126dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginRight="21dp"
+        android:layout_marginBottom="565dp"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        android:text="Vehicle Type"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/driverTypeSpinner"
+        app:layout_constraintEnd_toStartOf="@+id/driverVehicleTypeSpinner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/DriverVehicleNo"
-        android:layout_width="204dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginEnd="72dp"
-        android:layout_marginRight="72dp"
-        android:gravity="center_vertical"
+        android:id="@+id/driverVehicleNumber"
+        android:layout_width="109dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="216dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginRight="21dp"
+        android:layout_marginBottom="473dp"
+        android:background="#FFFFFF"
+        android:gravity="center"
         android:text="Vehicle Number"
-        android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/vehicleNoSpinner"
-        app:layout_constraintHorizontal_bias="0.02"
+        app:layout_constraintEnd_toStartOf="@+id/driverVehicleNumberSpinner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.432" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/DriverNextButton"
-        android:layout_width="197dp"
-        android:layout_height="59dp"
-        android:layout_marginStart="109dp"
-        android:layout_marginLeft="109dp"
-        android:layout_marginTop="61dp"
-        android:layout_marginEnd="138dp"
-        android:layout_marginRight="138dp"
-        android:layout_marginBottom="380dp"
-        android:gravity="center"
+        android:id="@+id/driverNextButton"
+        android:layout_width="116dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginLeft="128dp"
+        android:layout_marginEnd="167dp"
+        android:layout_marginRight="167dp"
         android:text="Next"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vehicleNoSpinner" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.539" />
 </androidx.constraintlayout.widget.ConstraintLayout>
