--- a/app/src/main/res/layout/activity_request_confirm.xml
+++ b/app/src/main/res/layout/activity_request_confirm.xml
@@ -8,30 +8,58 @@
 <!--    android:layout_height="match_parent"-->
 <!--    tools:context=".RequestConfirmActivity" />-->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <fragment
         android:id="@+id/car_request_confirm"
         class="com.google.android.gms.maps.SupportMapFragment"
+
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="-2dp"
-        android:layout_marginLeft="-2dp"
-        android:layout_marginTop="1dp" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        >
 
-    <Button
-        android:id="@+id/carrequestconfirmbutton"
-        android:layout_width="143dp"
-        android:layout_height="41dp"
-        android:background="#359c5e"
-        android:padding="8dp"
-        android:text="Confirm"
-        android:textColor="#ffffff" />
+        <TextView
+            android:id="@+id/estimatedFareTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Estimated Fare"
+            android:textSize="24sp" />
 
-</RelativeLayout>
+
+        <Button
+            android:id="@+id/carrequestconfirmbutton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#359c5e"
+
+            android:padding="8dp"
+            android:text="Confirm"
+            android:textColor="#ffffff"
+            android:textSize="30sp" />
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
