driver location shown after selecting a request

--- a/app/src/main/res/layout/activity_driver_location_update.xml
+++ b/app/src/main/res/layout/activity_driver_location_update.xml
@@ -44,7 +44,7 @@
             android:id="@+id/driver_request_reject_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#359c5e"
+            android:background="#FF0000"
             android:padding="8dp"
             android:gravity="center_horizontal|center_vertical"
             android:text="Reject"
