driver sees map if already accepted

--- a/app/src/main/res/layout/activity_driver_location_update.xml
+++ b/app/src/main/res/layout/activity_driver_location_update.xml
@@ -9,7 +9,7 @@
 
 
     <fragment
-        android:id="@+id/car_request_confirm"
+        android:id="@+id/driverLocationFragment"
         class="com.google.android.gms.maps.SupportMapFragment"
 
         android:layout_width="0dp"
