user sees if the car is reached near him

--- a/app/src/main/res/layout/activity_user_side_driver_location_update.xml
+++ b/app/src/main/res/layout/activity_user_side_driver_location_update.xml
@@ -36,7 +36,7 @@
             android:background="#359c5e"
             android:padding="8dp"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Accept"
+            android:text=""
             android:textColor="#ffffff"
             android:textSize="30sp" />
 
