--- a/app/src/main/res/layout/activity_driver_location_update.xml
+++ b/app/src/main/res/layout/activity_driver_location_update.xml
@@ -62,6 +62,17 @@
             android:textColor="#ffffff"
             android:textSize="30sp" />
 
+        <Button
+            android:id="@+id/finishRideButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#359c5e"
+            android:padding="8dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="FINISH RIDE"
+            android:textColor="#ffffff"
+            android:textSize="30sp" />
+
 
         <!--        <Button-->
 <!--            android:id="@+id/carrequestconfirmbutton"-->
