history added,need to do modifications

--- a/app/src/main/res/layout/activity_history_showing.xml
+++ b/app/src/main/res/layout/activity_history_showing.xml
@@ -4,6 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#283593"
     tools:context=".HistoryShowingActivity">
 
+    <ListView
+        android:id="@+id/histroy_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FBF6F6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
