--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,9 +9,14 @@
             android:icon="@drawable/history_icon"
             android:title="Your Trips" />
         <item
-            android:id="@+id/nav_help"
+            android:id="@+id/nav_contact_us"
             android:icon="@drawable/help_icon"
-            android:title="Help" />
+            android:title="Contact us" />
+
+        <item
+            android:id="@+id/nav_emergency_call"
+            android:icon="@drawable/urgent_call"
+            android:title="Emergency" />
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/logout_icon"
