--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,7 +16,7 @@
         <item
             android:id="@+id/nav_emergency_call"
             android:icon="@drawable/urgent_call"
-            android:title="Emergency" />
+            android:title="Emergency(call 999) " />
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/logout_icon"
