history window modified

--- a/app/src/main/res/layout/activity_history_showing.xml
+++ b/app/src/main/res/layout/activity_history_showing.xml
@@ -13,8 +13,8 @@
         android:layout_height="match_parent"
         android:background="#FFFFFF"
         android:backgroundTintMode="multiply"
-        android:divider="@drawable/hb2"
-        android:dividerHeight="150dp"
+        android:dividerHeight="20dp"
+        android:divider="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
