--- a/app/src/main/res/layout/activity_promo_code.xml
+++ b/app/src/main/res/layout/activity_promo_code.xml
@@ -42,13 +42,13 @@
 
     <TextView
         android:id="@+id/alreadyAppliedTextView"
-        android:layout_width="390dp"
-        android:layout_height="293dp"
+        android:layout_width="332dp"
+        android:layout_height="391dp"
         android:background="#000000"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:text="Promo Code Already Applied"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
