promo code ui modified

--- a/app/src/main/res/layout/activity_promo_code.xml
+++ b/app/src/main/res/layout/activity_promo_code.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="#EAE7E7"
     tools:context=".PromoCodeActivity">
 
     <EditText
@@ -19,7 +19,8 @@
         android:gravity="center|center_horizontal"
         android:hint="Apply Promo Code Here"
         android:inputType="textPersonName"
-        android:textColorHint="#232222"
+        android:textColor="#000000"
+        android:textColorHint="#232121"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,23 +33,30 @@
         android:layout_marginTop="41dp"
         android:layout_marginEnd="138dp"
         android:layout_marginBottom="401dp"
-        android:background="#00ff00"
+        android:background="#4CAF50"
         android:text="APPLY"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textColorLink="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/promocodeEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/promocodeEditText"
+        app:rippleColor="#FFFFFF"
+        app:strokeColor="#FFFFFF" />
 
     <TextView
         android:id="@+id/alreadyAppliedTextView"
-        android:layout_width="332dp"
-        android:layout_height="391dp"
-        android:background="#000000"
-        android:gravity="center_vertical"
+        android:layout_width="364dp"
+        android:layout_height="622dp"
+        android:background="#EAE7E7"
+        android:fontFamily="monospace"
+        android:gravity="center_horizontal|center_vertical"
         android:text="Promo Code Already Applied"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textColor="#000000"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
